package decoratorPattern;

public abstract class Component {
    public abstract void jiami();
}
