package decoratorPattern;

public class EazyJiaMi extends Component {

    @Override
    public void jiami() {
        System.out.println("通过Eazy加密方式");
    }
}
